Fixed issue with logout modal, worked on mobile view for usertype and signup for company, added a dummy  favicon

--- a/src/styles/BackArrow.module.css
+++ b/src/styles/BackArrow.module.css
@@ -9,3 +9,12 @@
 .backArrow:focus{
     outline: none;
 }
+@media screen and (max-width: 760px) {
+    .backArrow{
+        font-size: 0.875rem;
+        font-weight: 400;
+    }
+    .backArrow svg{
+        width: 12px;
+    }
+}
