--- a/src/styles/CompanySignUp.module.css
+++ b/src/styles/CompanySignUp.module.css
@@ -42,6 +42,11 @@
     gap: 48px;
     height: fit-content;
 }
+.right h2{
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+}
 .inputField{
     display: grid;
     gap: 24px;
@@ -49,4 +54,27 @@
 .textSize{
     font-size: 0.875rem;
     font-weight: 300;
+}
+
+@media screen and (max-width:760px) {
+    .body{
+        padding: 48px 24px;
+    }
+    .left{
+        display: none;
+    }
+    .pagination{
+        display: none;
+    }
+    .section{
+        padding-top: 48px;
+    }
+    .right{
+        padding: 32px 24px;
+        gap: 24px;
+    }
+    .right h2{
+        font-size: 1.25rem;
+        font-weight: 600;
+    }
 }
