--- a/src/styles/companyDashboard.module.css
+++ b/src/styles/companyDashboard.module.css
@@ -6,7 +6,7 @@
     gap: 32px;
 }
 
-.container button {
+.cpbtn {
     width: fit-content;
     padding: 9px 16px;
     display: flex;
